# security-cam-esp32

./: .gitignore  CMakeLists.txt  README.md
esp32/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
esp32/main/: CMakeLists.txt  Kconfig.projbuild  aws_iot.c  aws_iot.h  aws_upload.c  aws_upload.h  camera.c  camera.h  main.c  motion_detection.c  motion_detection.h  wifi_connect.c  wifi_connect.h
main/: CMakeLists.txt  Kconfig.projbuild  aws_upload.c  aws_upload.h  camera.h  camera_task.c  camera_task.h  main.c  motion_detection.c  motion_detection.h
terraform-infra/: .terraform.lock.hcl  README.md  api_gateway.tf  iam.tf  iam_roles.tf  lambda_presigned_url.tf  main.tf  provider.tf  s3-image-store.tf  s3.tf  variables.tf  vpc.tf
terraform-infra/dynamo_trigger/: iam_role.tf  main.tf  outputs.tf  variables.tf
terraform-infra/dynamo_trigger/lambda_funcs/: index.js
terraform-infra/dynamodb/: main.tf  outputs.tf  variables.tf
terraform-infra/lambda-funcs/generate-presigned-url/: package-lock.json
terraform-infra/lambda_presigned_url/: iam_role.tf  main.tf  variables.tf
terraform-infra/lambda_presigned_url/lambda_funcs/: index.js  package.json
terraform-infra/modules/api_gateway/: main.tf  outputs.tf  variables.tf
terraform-infra/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform-infra/modules/iot/: main.tf  outputs.tf  variables.tf
terraform-infra/modules/s3-frontend/: main.tf  outputs.tf
terraform-infra/s3/: main.tf  variables.tf
web-frontend/: README.md  index.html  script.js  styles.css
(+43 files in other folders)
